# pyFileIndexer

./: .dockerignore  .gitignore  .ignore  BENCHMARK.md  CI_BENCHMARK.md  CLAUDE.md  Dockerfile  Dockerfile.old  README.md  benchmark.py  database.py  main.py  models.py  pyproject.toml  run_tests.py  settings.toml
.github/workflows/: benchmark.yml  ci.yml  docker-publish.yml
.trae/documents/: 压缩包读取失败容错，不中断全局扫描.md  扫描时暴露 Metrics 指标.md
docs/: database-refactoring-plan.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Dashboard.tsx  DuplicatesPage.tsx  EllipsisWithTooltip.tsx  FileList.tsx  FileTreePage.tsx  SearchPage.tsx
frontend/src/services/: FileService.ts  api.ts
frontend/src/types/: api.ts
pyFileIndexer/: __init__.py  __main__.py  archive_scanner.py  cached_config.py  config.py  database.py  db_merge.py  dto.py  main.py  metrics.py  models.py  web_models.py  web_server.py
tests/: README.md  conftest.py  test_archive_scanner.py  test_config.py  test_database.py  test_db_merge.py  test_integration.py  test_main.py  test_models.py  test_web_api.py  test_web_api_isolated_db.py  utils.py
tests/fixtures/: sample_data.py
web/: README.md
web/backend/: app.py
web/backend/models/: responses.py
web/frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json  vite.config.ts
web/frontend/src/: App.css  App.tsx  index.css
web/frontend/src/components/: Dashboard.tsx  FileList.tsx  SearchPage.tsx
web/frontend/src/services/: api.ts
