[project]
name = "pyfileindexer"
version = "0.1.0"
description = ""
authors = [{ name = "suyiiyii", email = "suyiiyii@gmail.com" }]
readme = "README.md"
dependencies = [
    "SQLAlchemy>=2.0.30,<3.0.0",
    "dynaconf>=3.2.5,<4.0.0",
    "pytest>=8.4.2",
    "tqdm>=4.66.5,<5.0.0",
    "fastapi>=0.104.0,<1.0.0",
    "uvicorn[standard]>=0.24.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "psutil>=5.9.0,<6.0.0",
    "rarfile>=4.1.0,<5.0.0",
]
requires-python = ">=3.11"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "pytest-asyncio>=0.23.0",
    "freezegun>=1.4.0",
    "httpx>=0.25.0",
]

dev = [
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "database: Tests that require database",
    "filesystem: Tests that require filesystem access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]


[tool.pyright]
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
        "./pyfileindexer",
    ] },
    { root = "./" },
]
